--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="md:flex md:justify-center md:items-center gap-4 md:mt-16">
           
-        <div class="mt-4 p-8 border-t-4 border-primary-cyan rounded-lg shadow-xl md:w-96">
+        <div class="mt-4 p-8 border-t-4 border-primary-cyan rounded-lg shadow-xl md:w-96 transition duration-300 ease-in-out hover:scale-105">
           <h3 class="mt-3 font-bold mb-3">Supervisor</h3>
           <p class="text-sm">Monitors activity to identify project roadblocks</p>
           <div class="flex justify-end mt-6">
@@ -38,7 +38,7 @@
         </div>
 
         <div>
-          <div class="mt-4 p-8 border-t-4 border-primary-red rounded-lg shadow-xl md:w-96">
+          <div class="mt-4 p-8 border-t-4 border-primary-red rounded-lg shadow-xl md:w-96 transition duration-300 ease-in-out hover:scale-105">
             <h3 class="mt-3 font-bold mb-3">Team Builder</h3>
             <p class="text-sm">Scans our talent network to create the optimal team for your project</p>
             <div class="flex justify-end mt-6">
@@ -46,7 +46,7 @@
             </div>
           </div>
 
-          <div class="mt-4 p-8 border-t-4 border-primary-orange rounded-lg shadow-xl md:w-96">
+          <div class="mt-4 p-8 border-t-4 border-primary-orange rounded-lg shadow-xl md:w-96 transition duration-300 ease-in-out hover:scale-105">
             <h3 class="mt-3 font-bold mb-3">Karma</h3>
             <p class="text-sm">Regularly evaluates our talent to ensure quality</p>
             <div class="flex justify-end mt-6">
@@ -56,7 +56,7 @@
         </div>
 
 
-        <div class="mt-4 p-8 border-t-4 border-primary-blue rounded-lg shadow-xl md:w-96">
+        <div class="mt-4 p-8 border-t-4 border-primary-blue rounded-lg shadow-xl md:w-96 transition duration-300 ease-in-out hover:scale-105">
           <h3 class="mt-3 font-bold mb-3">Calculator</h3>
           <p class="text-sm">Uses data from past projects to provide better delivery estimates</p>
           <div class="flex justify-end mt-6">
